🔧 fix: update Dockerfiles to use 2023.2-eol branch for dependencies
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/images/barbican/Dockerfile
+++ b/images/barbican/Dockerfile
@@ -3,9 +3,7 @@
 # Atmosphere-Rebuild-Time: 2024-06-26T17:38:39Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/barbican repo=https://opendev.org/openstack/barbican.git branch=stable/2023.2
-ARG BARBICAN_GIT_REF=aa794d289714cbf5f4a21b1c23b7d3bb33bcf528
-ADD --keep-git-dir=true https://opendev.org/openstack/barbican.git#${BARBICAN_GIT_REF} /src/barbican
+ADD --keep-git-dir=true https://opendev.org/openstack/barbican.git#2023.2-eol /src/barbican
 RUN git -C /src/barbican fetch --unshallow
 RUN --mount=type=cache,mode=0755,target=/root/.cache/pip,sharing=private <<EOF bash -xe
 pip3 install \
