--- a/images/designate/Dockerfile
+++ b/images/designate/Dockerfile
@@ -3,9 +3,7 @@
 # Atmosphere-Rebuild-Time: 2024-06-26T17:38:39Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/designate repo=https://opendev.org/openstack/designate.git branch=stable/2023.2
-ARG DESIGNATE_GIT_REF=eaecbaa8173a9c2efe1dccd2157928d2d0574133
-ADD --keep-git-dir=true https://opendev.org/openstack/designate.git#${DESIGNATE_GIT_REF} /src/designate
+ADD --keep-git-dir=true https://opendev.org/openstack/designate.git#2023.2-eol /src/designate
 RUN git -C /src/designate fetch --unshallow
 COPY patches/designate /patches/designate
 RUN git -C /src/designate apply --verbose /patches/designate/*
