--- a/images/ironic/Dockerfile
+++ b/images/ironic/Dockerfile
@@ -3,9 +3,7 @@
 # Atmosphere-Rebuild-Time: 2024-06-26T17:38:39Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/ironic repo=https://opendev.org/openstack/ironic.git branch=stable/2023.2
-ARG IRONIC_GIT_REF=fcd9f2b49fa240d935097034e1909e8029001380
-ADD --keep-git-dir=true https://opendev.org/openstack/ironic.git#${IRONIC_GIT_REF} /src/ironic
+ADD --keep-git-dir=true https://opendev.org/openstack/ironic.git#2023.2-eol /src/ironic
 RUN git -C /src/ironic fetch --unshallow
 RUN --mount=type=cache,mode=0755,target=/root/.cache/pip,sharing=private <<EOF bash -xe
 pip3 install \
