--- a/images/neutron/Dockerfile
+++ b/images/neutron/Dockerfile
@@ -3,19 +3,13 @@
 # Atmosphere-Rebuild-Time: 2025-01-24T11:51:19Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/neutron repo=https://opendev.org/openstack/neutron.git branch=stable/2023.2
-ARG NEUTRON_GIT_REF=feacf1d88b3c4c05a80107d2143b5139a2e2d16d
-ADD --keep-git-dir=true https://opendev.org/openstack/neutron.git#${NEUTRON_GIT_REF} /src/neutron
+ADD --keep-git-dir=true https://opendev.org/openstack/neutron.git#2023.2-eol /src/neutron
 RUN git -C /src/neutron fetch --unshallow
 COPY patches/neutron /patches/neutron
 RUN git -C /src/neutron apply --verbose /patches/neutron/*
-# renovate: name=openstack/neutron-vpnaas repo=https://opendev.org/openstack/neutron-vpnaas.git branch=stable/2023.2
-ARG NEUTRON_VPNAAS_GIT_REF=a19ab5265562978eb9dc61a18d2f05cdf73aa05a
-ADD --keep-git-dir=true https://opendev.org/openstack/neutron-vpnaas.git#${NEUTRON_VPNAAS_GIT_REF} /src/neutron-vpnaas
+ADD --keep-git-dir=true https://opendev.org/openstack/neutron-vpnaas.git#2023.2-eol /src/neutron-vpnaas
 RUN git -C /src/neutron-vpnaas fetch --unshallow
-# renovate: name=openstack/networking-baremetal repo=https://opendev.org/openstack/networking-baremetal.git branch=stable/2023.2
-ARG NETWORKING_BAREMETAL_GIT_REF=7df6ca9eca836b7ba6598005d736f6a853983537
-ADD --keep-git-dir=true https://opendev.org/openstack/networking-baremetal.git#${NETWORKING_BAREMETAL_GIT_REF} /src/networking-baremetal
+ADD --keep-git-dir=true https://opendev.org/openstack/networking-baremetal.git#2023.2-eol /src/networking-baremetal
 RUN git -C /src/networking-baremetal fetch --unshallow
 # renovate: name=vexxhost/neutron-policy-server repo=https://github.com/vexxhost/neutron-policy-server.git branch=main
 ARG POLICY_SERVER_GIT_REF=41c862a7e15955195ebac56a48ae98137aac146d
