--- a/images/placement/Dockerfile
+++ b/images/placement/Dockerfile
@@ -3,9 +3,7 @@
 # Atmosphere-Rebuild-Time: 2024-06-26T17:38:39Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/placement repo=https://opendev.org/openstack/placement.git branch=stable/2023.2
-ARG PLACEMENT_GIT_REF=d84f211fd2ff84a2521d418f88412abac3f3d30f
-ADD --keep-git-dir=true https://opendev.org/openstack/placement.git#${PLACEMENT_GIT_REF} /src/placement
+ADD --keep-git-dir=true https://opendev.org/openstack/placement.git#2023.2-eol /src/placement
 RUN git -C /src/placement fetch --unshallow
 RUN --mount=type=cache,mode=0755,target=/root/.cache/pip,sharing=private <<EOF bash -xe
 pip3 install \
