✨ chore: update version retrieval method and configure version file
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,3 +48,6 @@ issues = "https://github.com/vexxhost/atmosphere/issues"
 
 [tool.hatch.version]
 source = "vcs"
+
+[tool.hatch.build.hooks.vcs]
+version-file = "atmosphere/_version.py"
