🔧 chore: update base images and dependencies for stable/2025.1 branch
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/images/heat/Dockerfile
+++ b/images/heat/Dockerfile
@@ -3,8 +3,8 @@
 # Atmosphere-Rebuild-Time: 2024-06-25T22:49:25Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/heat repo=https://opendev.org/openstack/heat.git branch=master
-ARG HEAT_GIT_REF=6b7b8bb8eae2382858d1249d1525faa6280744bc
+# renovate: name=openstack/heat repo=https://opendev.org/openstack/heat.git branch=stable/2025.1
+ARG HEAT_GIT_REF=1ba2f085324fde3a66024e48659ecdf9fb151659
 ADD --keep-git-dir=true https://opendev.org/openstack/heat.git#${HEAT_GIT_REF} /src/heat
 RUN git -C /src/heat fetch --unshallow
 RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
