--- a/images/magnum/Dockerfile
+++ b/images/magnum/Dockerfile
@@ -11,8 +11,8 @@ RUN tar -xzf /helm.tar.gz
 RUN mv /${TARGETOS}-${TARGETARCH}/helm /usr/bin/helm
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/magnum repo=https://opendev.org/openstack/magnum.git branch=master
-ARG MAGNUM_GIT_REF=4e4496228ca321c8149d7a801b50aeb7b48b7e92
+# renovate: name=openstack/magnum repo=https://opendev.org/openstack/magnum.git branch=stable/2025.1
+ARG MAGNUM_GIT_REF=29707e9bf1c7926ab784022f6d34f7df8d68cbcf
 ADD --keep-git-dir=true https://opendev.org/openstack/magnum.git#${MAGNUM_GIT_REF} /src/magnum
 RUN git -C /src/magnum fetch --unshallow
 RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
