--- a/images/designate/Dockerfile
+++ b/images/designate/Dockerfile
@@ -3,8 +3,8 @@
 # Atmosphere-Rebuild-Time: 2024-06-25T22:49:25Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/designate repo=https://opendev.org/openstack/designate.git branch=master
-ARG DESIGNATE_GIT_REF=595894be2202bfd98805a0ed87281e69c59b5c1d
+# renovate: name=openstack/designate repo=https://opendev.org/openstack/designate.git branch=stable/2025.1
+ARG DESIGNATE_GIT_REF=a891d81974a4c3aa56a143252b26df9dcbd5fba5
 ADD --keep-git-dir=true https://opendev.org/openstack/designate.git#${DESIGNATE_GIT_REF} /src/designate
 RUN git -C /src/designate fetch --unshallow
 COPY patches/designate /patches/designate
