--- a/images/glance/Dockerfile
+++ b/images/glance/Dockerfile
@@ -3,12 +3,12 @@
 # Atmosphere-Rebuild-Time: 2024-06-25T22:49:25Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/glance repo=https://opendev.org/openstack/glance.git branch=master
-ARG GLANCE_GIT_REF=788172a6f7c7a214e87a80a27cb26ea33da67a58
+# renovate: name=openstack/glance repo=https://opendev.org/openstack/glance.git branch=stable/2025.1
+ARG GLANCE_GIT_REF=99b54964031408555917539b73eb5c18e463f89a
 ADD --keep-git-dir=true https://opendev.org/openstack/glance.git#${GLANCE_GIT_REF} /src/glance
 RUN git -C /src/glance fetch --unshallow
-# renovate: name=openstack/glance_store repo=https://opendev.org/openstack/glance_store.git branch=master
-ARG GLANCE_STORE_GIT_REF=2fd7875820a531d26336a317d5c0841d452bc6f9
+# renovate: name=openstack/glance_store repo=https://opendev.org/openstack/glance_store.git branch=stable/2025.1
+ARG GLANCE_STORE_GIT_REF=e7b3523e469921382fb4d8236dfedd80f3f7a68c
 ADD --keep-git-dir=true https://opendev.org/openstack/glance_store.git#${GLANCE_STORE_GIT_REF} /src/glance_store
 RUN git -C /src/glance_store fetch --unshallow
 RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
