--- a/images/placement/Dockerfile
+++ b/images/placement/Dockerfile
@@ -3,8 +3,8 @@
 # Atmosphere-Rebuild-Time: 2024-06-25T22:49:25Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/placement repo=https://opendev.org/openstack/placement.git branch=master
-ARG PLACEMENT_GIT_REF=2e30b0457b6c21bfa02b7c95ef5644e15f27e667
+# renovate: name=openstack/placement repo=https://opendev.org/openstack/placement.git branch=stable/2025.1
+ARG PLACEMENT_GIT_REF=7ebf35f049a3ab5bd7be5a2e4ffbd0d82ed4f00f
 ADD --keep-git-dir=true https://opendev.org/openstack/placement.git#${PLACEMENT_GIT_REF} /src/placement
 RUN git -C /src/placement fetch --unshallow
 RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
