--- a/images/ubuntu-cloud-archive/Dockerfile
+++ b/images/ubuntu-cloud-archive/Dockerfile
@@ -5,5 +5,5 @@
 FROM ubuntu
 COPY trusted.gpg.d/ubuntu-cloud-keyring.gpg /etc/apt/trusted.gpg.d/ubuntu-cloud-keyring.gpg
 COPY <<EOF /etc/apt/sources.list.d/cloudarchive.list
-deb http://ubuntu-cloud.archive.canonical.com/ubuntu jammy-updates/caracal main
+deb http://ubuntu-cloud.archive.canonical.com/ubuntu noble-updates/epoxy main
 EOF
