--- a/images/keystone/Dockerfile
+++ b/images/keystone/Dockerfile
@@ -3,8 +3,8 @@
 # Atmosphere-Rebuild-Time: 2024-06-25T22:49:25Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/keystone repo=https://opendev.org/openstack/keystone.git branch=master
-ARG KEYSTONE_GIT_REF=1deab5faa2f7dc8079607b44f208fd6734bd2e58
+# renovate: name=openstack/keystone repo=https://opendev.org/openstack/keystone.git branch=stable/2025.1
+ARG KEYSTONE_GIT_REF=aab001fea362bc576eb51507af7c15355c8c3f28
 ADD --keep-git-dir=true https://opendev.org/openstack/keystone.git#${KEYSTONE_GIT_REF} /src/keystone
 RUN git -C /src/keystone fetch --unshallow
 RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
@@ -22,7 +22,7 @@ apt-get install -qq -y --no-install-recommends \
 apt-get clean
 rm -rf /var/lib/apt/lists/*
 EOF
-ARG MOD_AUTH_OPENIDC_VERSION=2.4.12.1
+ARG MOD_AUTH_OPENIDC_VERSION=2.4.17
 ARG TARGETARCH
 RUN <<EOF bash -xe
 # TODO(mnaser): mod_auth_openidc does not have aarch64 builds
