feat: add dynamic-routing and networking-generic-switch support for Neutron (#2730)
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>
Co-authored-by: Mohammed Naser <mnaser@vexxhost.com>
(cherry picked from commit c6228ab55916590955e7cd116aeb9d192b6dbf00)

--- a/images/neutron/Dockerfile
+++ b/images/neutron/Dockerfile
@@ -9,6 +9,10 @@ ADD --keep-git-dir=true https://opendev.org/openstack/neutron.git#${NEUTRON_GIT_
 RUN git -C /src/neutron fetch --unshallow
 COPY patches/neutron /patches/neutron
 RUN git -C /src/neutron apply --verbose /patches/neutron/*
+# renovate: name=openstack/neutron-dynamic-routing repo=https://opendev.org/openstack/neutron-dynamic-routing.git branch=stable/2024.2
+ARG NEUTRON_DYNAMIC_ROUTING_GIT_REF=1d3ecd2cf3ebc82267406d59e06f3f3b97ffdcd4
+ADD --keep-git-dir=true https://opendev.org/openstack/neutron-dynamic-routing.git#${NEUTRON_DYNAMIC_ROUTING_GIT_REF} /src/neutron-dynamic-routing
+RUN git -C /src/neutron-dynamic-routing fetch --unshallow
 # renovate: name=openstack/neutron-vpnaas repo=https://opendev.org/openstack/neutron-vpnaas.git branch=stable/2024.2
 ARG NEUTRON_VPNAAS_GIT_REF=11ffc53800e528d0b0544f7467a7487e0822bd3f
 ADD --keep-git-dir=true https://opendev.org/openstack/neutron-vpnaas.git#${NEUTRON_VPNAAS_GIT_REF} /src/neutron-vpnaas
@@ -17,6 +21,10 @@ RUN git -C /src/neutron-vpnaas fetch --unshallow
 ARG NETWORKING_BAREMETAL_GIT_REF=1fba63ce21619d3fe70117c6679e53629c612bc1
 ADD --keep-git-dir=true https://opendev.org/openstack/networking-baremetal.git#${NETWORKING_BAREMETAL_GIT_REF} /src/networking-baremetal
 RUN git -C /src/networking-baremetal fetch --unshallow
+# renovate: name=openstack/networking-generic-switch repo=https://opendev.org/openstack/networking-generic-switch.git branch=stable/2024.2
+ARG NETWORKING_GENERIC_SWITCH_GIT_REF=58e5d5039e6bddaad5e8a1802d44aec92b71f14f
+ADD --keep-git-dir=true https://opendev.org/openstack/networking-generic-switch.git#${NETWORKING_GENERIC_SWITCH_GIT_REF} /src/networking-generic-switch
+RUN git -C /src/networking-generic-switch fetch --unshallow
 # renovate: name=vexxhost/neutron-policy-server repo=https://github.com/vexxhost/neutron-policy-server.git branch=main
 ARG POLICY_SERVER_GIT_REF=41c862a7e15955195ebac56a48ae98137aac146d
 ADD --keep-git-dir=true https://github.com/vexxhost/neutron-policy-server.git#${POLICY_SERVER_GIT_REF} /src/neutron-policy-server
@@ -29,8 +37,10 @@ RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
 uv pip install \
     --constraint /upper-constraints.txt \
         /src/neutron \
+        /src/neutron-dynamic-routing \
         /src/neutron-vpnaas \
         /src/networking-baremetal \
+        /src/networking-generic-switch \
         /src/neutron-policy-server \
         /src/neutron-ovn-network-logging-parser
 EOF
