--- a/images/libvirtd/Dockerfile
+++ b/images/libvirtd/Dockerfile
@@ -10,7 +10,7 @@ EOF
 RUN <<EOF bash -xe
 apt-get update -qq
 apt-get install -qq -y --no-install-recommends \
-    ceph-common cgroup-tools dmidecode ebtables iproute2 ipxe-qemu kmod libtpms0 libvirt-clients libvirt-daemon-system openssh-client openvswitch-switch ovmf pm-utils qemu-block-extra qemu-efi qemu-kvm seabios swtpm swtpm-tools
+    ceph-common cgroup-tools dmidecode ebtables iproute2 ipxe-qemu kmod libtpms0 libvirt-clients libvirt-daemon-system openssh-client openvswitch-switch ovmf pm-utils qemu-block-extra qemu-efi-aarch64 qemu-kvm seabios swtpm swtpm-tools
 apt-get clean
 rm -rf /var/lib/apt/lists/*
 EOF
