--- a/tox.ini
+++ b/tox.ini
@@ -53,7 +53,7 @@ setenv =
   rbd: MOLECULE_CSI_DRIVER = rbd
   local-path-provisioner: MOLECULE_CSI_DRIVER = local-path-provisioner
 commands =
-  molecule test -s csi
+  molecule -vvvvv test -s csi
 
 [testenv:molecule-aio-{openvswitch,ovn}]
 deps =
