--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -91,7 +91,7 @@ jobs:
       build-id: ${{ steps.bake.outputs.build-id }}
 
   csi:
-    runs-on: ubuntu-22.04
+    runs-on: vexxhost-ubuntu-22.04-4
     if: ${{ github.event_name == 'pull_request' }}
     strategy:
       fail-fast: false
