set UV_PYTHON_PREFERENCE to system
Change-Id: I5e8c18efdc7710b3cf4fe0fc834bf4b827e6737e
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/.github/actions/molecule/action.yaml
+++ b/.github/actions/molecule/action.yaml
@@ -40,7 +40,7 @@ runs:
         echo ${{ github.workspace }}/.venv/bin >> $GITHUB_PATH
       env:
         UV_PYTHON_DOWNLOADS: auto
-        UV_PYTHON_PREFERENCE: only-managed
+        UV_PYTHON_PREFERENCE: system
 
     - uses: depot/setup-action@v1
       if: ${{ inputs.depot_build_id != '' }}
