--- a/molecule/aio/create.yml
+++ b/molecule/aio/create.yml
@@ -29,6 +29,46 @@
       ansible.builtin.wait_for:
         timeout: 15
 
+    - name: Check disk usage
+      changed_when: false
+      ansible.builtin.command:
+        cmd: "df -h"
+      register: log
+      retries: 5
+      delay: 1
+      until: log is not failed
+
+    - name: Check log stdout
+      ansible.builtin.debug:
+        msg: "{{ log.stdout_lines }}"
+
+    - name: Check disk usage big file
+      changed_when: false
+      ignore_errors: true
+      ansible.builtin.command:
+        cmd: "bash -c 'set -ex; find / -size +100M -ls'"
+      register: log_big
+      retries: 5
+      delay: 1
+      until: log_big is not failed
+
+    - name: Check log stdout for big file
+      ansible.builtin.debug:
+        msg: "{{ log_big.stdout_lines }}"
+
+    - name: Check disk usage loopback dev
+      changed_when: false
+      ansible.builtin.command:
+        cmd: "losetup -a"
+      register: log_loop
+      retries: 5
+      delay: 1
+      until: log_loop is not failed
+
+    - name: Check log stdout for loopback dev
+      ansible.builtin.debug:
+        msg: "{{ log_loop.stdout_lines }}"
+
 - name: Generate workspace
   ansible.builtin.import_playbook: vexxhost.atmosphere.generate_workspace
   vars:
