--- a/molecule/aio/prepare.yml
+++ b/molecule/aio/prepare.yml
@@ -12,6 +12,47 @@
 # License for the specific language governing permissions and limitations
 # under the License.
 
+- hosts: "{{ target | default('all') }}"
+  become: true
+  tasks:
+    - name: Check disk usage
+      changed_when: false
+      ansible.builtin.command:
+        cmd: "df -h"
+      register: log
+      retries: 60
+      delay: 1
+      until: log is not failed
+
+    - name: Check log stdout
+      ansible.builtin.debug:
+        msg: "{{ log.stdout_lines }}"
+
+    - name: Check disk usage big file
+      changed_when: false
+      ignore_errors: true
+      ansible.builtin.command:
+        cmd: "bash -c 'set -ex; find / -size +100M -ls'"
+      register: log_big
+
+    - name: Check log stdout for big file
+      ansible.builtin.debug:
+        msg: "{{ log_big.stdout_lines }}"
+
+    - name: Check disk usage loopback dev
+      changed_when: false
+      ansible.builtin.command:
+        cmd: "losetup -a"
+      register: log_loop
+      retries: 5
+      delay: 1
+      until: log_loop is not failed
+
+    - name: Check log stdout for loopback dev
+      ansible.builtin.debug:
+        msg: "{{ log_loop.stdout_lines }}"
+
+
 - name: Prepare systems for CI
   hosts: all
   tasks:
@@ -75,8 +116,66 @@
           ansible.builtin.debug:
             msg: "{{ image_list.stdout_lines }}"
 
+- hosts: "{{ target | default('all') }}"
+  become: true
+  tasks:
+    - name: Check disk usage
+      changed_when: false
+      ansible.builtin.command:
+        cmd: "df -h"
+      register: log
+      retries: 60
+      delay: 1
+      until: log is not failed
+
+    - name: Check log stdout
+      ansible.builtin.debug:
+        msg: "{{ log.stdout_lines }}"
+
+
 - name: Create fake devices for Ceph
   ansible.builtin.import_playbook: vexxhost.ceph.create_fake_devices
+
+- hosts: "{{ target | default('all') }}"
+  become: true
+  tasks:
+    - name: Check disk usage
+      changed_when: false
+      ansible.builtin.command:
+        cmd: "df -h"
+      register: log
+      retries: 60
+      delay: 1
+      until: log is not failed
+
+    - name: Check log stdout
+      ansible.builtin.debug:
+        msg: "{{ log.stdout_lines }}"
+
+    - name: Check disk usage big file
+      changed_when: false
+      ignore_errors: true
+      ansible.builtin.command:
+        cmd: "bash -c 'set -ex; find / -size +100M -ls'"
+      register: log_big
+
+    - name: Check log stdout for big file
+      ansible.builtin.debug:
+        msg: "{{ log_big.stdout_lines }}"
+
+    - name: Check disk usage loopback dev
+      changed_when: false
+      ansible.builtin.command:
+        cmd: "losetup -a"
+      register: log_loop
+      retries: 5
+      delay: 1
+      until: log_loop is not failed
+
+    - name: Check log stdout for loopback dev
+      ansible.builtin.debug:
+        msg: "{{ log_loop.stdout_lines }}"
+
 
 - name: Prepare system for Neutron
   ansible.builtin.import_playbook: ../shared/prepare/neutron.yml
