--- a/molecule/csi/verify.yml
+++ b/molecule/csi/verify.yml
@@ -33,6 +33,56 @@
                 storage: 5Gi
             storageClassName: general
 
+    - name: Check disk usage
+      changed_when: false
+      ansible.builtin.command:
+        cmd: "df -h"
+      register: log
+      retries: 60
+      delay: 1
+      until: log is not failed
+
+    - name: Check log stdout
+      ansible.builtin.debug:
+        msg: "{{ log.stdout_lines }}"
+
+    - name: Check node usage
+      changed_when: false
+      ansible.builtin.command:
+        cmd: "kubectl describe node instance"
+      register: log_node
+      retries: 60
+      delay: 1
+      until: log_node is not failed
+
+    - name: Check log_node stdout
+      ansible.builtin.debug:
+        msg: "{{ log_node.stdout_lines }}"
+
+    - name: Check disk usage big file
+      changed_when: false
+      ignore_errors: true
+      ansible.builtin.command:
+        cmd: "bash -c 'set -ex; find / -size +100M -ls'"
+      register: log_big
+
+    - name: Check log stdout for big file
+      ansible.builtin.debug:
+        msg: "{{ log_big.stdout_lines }}"
+
+    - name: Check disk usage loopback dev
+      changed_when: false
+      ansible.builtin.command:
+        cmd: "losetup -a"
+      register: log_loop
+      retries: 5
+      delay: 1
+      until: log_loop is not failed
+
+    - name: Check log stdout for loopback dev
+      ansible.builtin.debug:
+        msg: "{{ log_loop.stdout_lines }}"
+
     - name: Create a pod
       kubernetes.core.k8s:
         state: present
