--- a/.github/actions/molecule/action.yaml
+++ b/.github/actions/molecule/action.yaml
@@ -39,8 +39,8 @@ runs:
         uv sync --dev
         echo ${{ github.workspace }}/.venv/bin >> $GITHUB_PATH
       env:
-        UV_PYTHON_DOWNLOADS: auto
-        UV_PYTHON_PREFERENCE: system
+        UV_PYTHON_DOWNLOADS: never
+        UV_PYTHON_PREFERENCE: only-system
 
     - uses: depot/setup-action@v1
       if: ${{ inputs.depot_build_id != '' }}
