--- a/playbooks/generate_workspace.yml
+++ b/playbooks/generate_workspace.yml
@@ -56,6 +56,7 @@
       # NOTE(mnaser): This is absolutely hideous but there's no clean way of
       #               doing this using `with_fileglob` or `with_filetree`
       with_dict:
+        ceph_fsid: "{{ ceph_fsid }}"
         ceph_mon_fsid: "{{ ceph_fsid }}"
         ceph_mon_public_network: "{{ ceph_public_network }}"
 
