feat: introduce metrics-server
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -18,6 +18,7 @@ dependencies:
   openstack.cloud: ">=2.0.0"
   vexxhost.ceph: 3.0.1
   vexxhost.kubernetes: ">=2.0.1"
+  atmosphere.common: ">=0.5.0"
 tags:
   - application
   - cloud
