chore: bump ceph version to 18.2.7 for molecule csi
Signed-off-by: Yaguang Tang <yaguang.tang@vexxhost.com>

--- a/molecule/aio/group_vars/all/molecule.yml
+++ b/molecule/aio/group_vars/all/molecule.yml
@@ -11,6 +11,8 @@ ceph_conf_overrides:
     option: auth allow insecure global id reclaim
     value: false
 
+ceph_version: 18.2.7
+
 kubernetes_keepalived_interface: br-mgmt
 
 cilium_helm_values:
