Fix cinder auth in nova conf
Change-Id: Id69d17f0b007711a58b307a187a2dab4c660154d
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/.charts.yml
+++ b/.charts.yml
@@ -161,6 +161,10 @@ charts:
     version: 0.3.46
     repository: *openstack_helm_repository
     dependencies: *openstack_helm_dependencies
+    patches:
+      gerrit:
+        review.opendev.org:
+          - 954211
   - name: octavia
     version: 0.2.9
     repository: *openstack_helm_repository
